# manim-visual-logic-drift

./: Makefile  README.md  checklist.md  pyproject.toml
data/benchmark/: mvld_bench.json
docs/: DEVELOPMENT.md
mvld/cli/: dashboard.py  evaluate.py  main.py  render.py  report.py  train.py
mvld/data/: augmenter.py  contrastive.py  dataset.py  generator.py  loaders.py  pretraining.py
mvld/eval/: animation_checker.py  base.py  directional.py  evaluator.py  logger.py  vlm_judge.py
mvld/pipeline/: base.py  dpo.py  mcts.py  miner.py  refinement.py  rft.py  rft_integration.py  sft.py
mvld/sandbox/: base.py  executor.py
samples/: simple_scene.py
scripts/: test_loaders.py
